extending kordamp solution by adding forcedObjectArray support to XMLSerilaizer