@@ -18,6 +18,8 @@ package net.sf.json;
 import java.beans.PropertyDescriptor;
 import java.io.IOException;
 import java.io.Writer;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Array;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
@@ -42,6 +44,7 @@ import net.sf.json.processors.JsonVerifier;
 import net.sf.json.processors.PropertyNameProcessor;
 import net.sf.json.regexp.RegexpUtils;
 import net.sf.json.util.CycleDetectionStrategy;
+import net.sf.json.util.EnumMorpher;
 import net.sf.json.util.JSONTokener;
 import net.sf.json.util.JSONUtils;
 import net.sf.json.util.PropertyFilter;
@@ -110,7 +113,7 @@ import org.apache.commons.logging.LogFactory;
  *
  * @author JSON.org
  */
-public final class JSONObject extends AbstractJSON implements JSON, Map, Comparable {
+public final class JSONObject extends AbstractJSON implements JSON, Map<String,Object>, Comparable {
 
    private static final Log log = LogFactory.getLog( JSONObject.class );
 
@@ -140,6 +143,11 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
    public static JSONObject fromObject( Object object, JsonConfig jsonConfig ) {
       if( object == null || JSONUtils.isNull( object ) ){
          return new JSONObject( true );
+      }else if( object instanceof Enum ){
+         throw new JSONException( "'object' is an Enum. Use JSONArray instead" );
+      }else if( object instanceof Annotation || (object != null && object.getClass()
+            .isAnnotation()) ){
+         throw new JSONException( "'object' is an Annotation." );
       }else if( object instanceof JSONObject ){
          return _fromJSONObject( (JSONObject) object, jsonConfig );
       }else if( object instanceof DynaBean ){
@@ -406,7 +414,6 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
                      }
                   }
                }else{
-                  // pd is null
                   if( !JSONUtils.isNull( value ) ){
                      if( value instanceof JSONArray ){
                         setProperty( bean, key, convertPropertyValueToCollection( key, value,
@@ -414,7 +421,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
                      }else if( String.class.isAssignableFrom( type ) || JSONUtils.isBoolean( type )
                            || JSONUtils.isNumber( type ) || JSONUtils.isString( type )
                            || JSONFunction.class.isAssignableFrom( type ) ){
-                        if( beanClass == null || bean instanceof Map || jsonConfig.getPropertySetStrategy() != null || 
+                        if( beanClass == null || bean instanceof Map || jsonConfig.getPropertySetStrategy() != null ||
                             !jsonConfig.isIgnorePublicFields() ){
                            setProperty( bean, key, value, jsonConfig );
                         }else{
@@ -516,9 +523,9 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
                               .morph( Array.newInstance( innerType, 0 )
                                     .getClass(), array );
                      }else if( !array.getClass()
-                           .equals( pd.getPropertyType() ) ){
+                           .equals(pd.getPropertyType()) ){
                         if( !pd.getPropertyType()
-                              .equals( Object.class ) ){
+                              .equals(Object.class) ){
                            Morpher morpher = JSONUtils.getMorpherRegistry()
                                  .getMorpherFor( Array.newInstance( innerType, 0 )
                                        .getClass() );
@@ -590,10 +597,10 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
                         }
                      }else{
                         if( targetClass == Object.class ){
-                           targetClass = resolveClass(classMap, key, name, type);
-                           if(targetClass == null) {
-                               targetClass = Object.class;
-                           }
+                            targetClass = resolveClass(classMap, key, name, type);
+                            if(targetClass == null) {
+                                targetClass = Object.class;
+                            }
                         }
                         Object newRoot = jsonConfig.getNewBeanInstanceStrategy()
                               .newInstance( targetClass, (JSONObject) value );
@@ -605,7 +612,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
                      targetClass = targetClass == null ? findTargetClass( name, classMap )
                            : targetClass;
                      Object newRoot = jsonConfig.getNewBeanInstanceStrategy()
-                           .newInstance( targetClass, (JSONObject) value );
+                           .newInstance( targetClass, null );
                      setProperty( root, key, toBean( (JSONObject) value, newRoot, jsonConfig ),
                            jsonConfig );
                   }else{
@@ -691,8 +698,8 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
       fireObjectEndEvent( jsonConfig );
       return jsonObject;
    }
-
-   private static JSONObject defaultBeanProcessing(Object bean, JsonConfig jsonConfig) {
+   
+   private static JSONObject defaultBeanProcessing(Object bean, JsonConfig jsonConfig) {      
       Class beanClass = bean.getClass();
       PropertyNameProcessor propertyNameProcessor = jsonConfig.findJsonPropertyNameProcessor( beanClass );      
       Collection exclusions = jsonConfig.getMergedExcludes( beanClass );
@@ -707,7 +714,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
                continue;
             }
 
-            if( jsonConfig.isIgnoreTransientFields() && isTransientField( key, beanClass ) ){
+            if( jsonConfig.isIgnoreTransientFields() && isTransientField( key, beanClass, jsonConfig ) ){
                continue;
             }
 
@@ -721,6 +728,21 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
                continue;
             }
             if( pds[i].getReadMethod() != null ){
+               /*
+               if( jsonConfig.isIgnoreJPATransient() ){
+                  try{
+                     Class transientClass = Class.forName( "javax.persistence.Transient" );
+                     if( pds[i].getReadMethod()
+                           .getAnnotation( transientClass ) != null ){
+                        continue;
+                     }
+                  }catch( ClassNotFoundException cnfe ){
+                     // ignore
+                  }
+               }
+               */
+               if(isTransient(pds[i].getReadMethod(), jsonConfig)) continue;
+
                Object value = PropertyUtils.getProperty( bean, key );
                if( jsonPropertyFilter != null && jsonPropertyFilter.apply( bean, key, value ) ){
                   continue;
@@ -757,7 +779,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
                      continue;
                   }
 
-                  if( jsonConfig.isIgnoreTransientFields() && isTransientField( field ) ) {
+                  if( jsonConfig.isIgnoreTransientFields() && isTransient( field, jsonConfig ) ) {
                      continue;
                   }
 
@@ -898,7 +920,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
          if( k == null ){
             throw new JSONException("JSON keys cannot be null.");
          }
-         if( !(k instanceof String) && !jsonConfig.isAllowNonStringKeys()) {
+         if( !(k instanceof String) && !jsonConfig.isAllowNonStringKeys() ) {
             throw new ClassCastException("JSON keys must be strings.");
          }
          String key = String.valueOf( k );
@@ -1236,6 +1258,40 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
       return JSONArray.toCollection( (JSONArray) value, jsc );
    }
 
+   /*
+   private static Collection convertPropertyValueToCollection( String key, Object value, JsonConfig jsonConfig,
+         String name, Map classMap, Object bean ) {
+      Class targetClass = findTargetClass( key, classMap );
+      targetClass = targetClass == null ? findTargetClass( name, classMap ) : targetClass;
+
+      PropertyDescriptor pd;
+      try{
+         pd = PropertyUtils.getPropertyDescriptor( bean, key );
+      }catch( IllegalAccessException e ){
+         throw new JSONException( e );
+      }catch( InvocationTargetException e ){
+         throw new JSONException( e );
+      }catch( NoSuchMethodException e ){
+         throw new JSONException( e );
+      }
+
+      if( null == targetClass ){
+         Class[] cType = JSONArray.getCollectionType( pd, false );
+         if( null != cType && cType.length == 1 ){
+            targetClass = cType[0];
+         }
+      }
+
+      JsonConfig jsc = jsonConfig.copy();
+      jsc.setRootClass( targetClass );
+      jsc.setClassMap( classMap );
+      jsc.setCollectionType( pd.getPropertyType() );
+      jsc.setEnclosedType( targetClass );
+      Collection collection = JSONArray.toCollection( (JSONArray) value, jsonConfig );
+      return collection;
+   }
+   */
+
    private static Class resolveClass(Map classMap, String key, String name, Class type) {
        Class targetClass = findTargetClass(key, classMap);
        if (targetClass == null) {
@@ -1280,17 +1336,27 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
       return targetClass;
    }
 
-   private static boolean isTransientField( String name, Class beanClass ) {
+   private static boolean isTransientField( String name, Class beanClass, JsonConfig jsonConfig ) {
       try{
-         return isTransientField(beanClass.getDeclaredField( name ));
+         Field field = beanClass.getDeclaredField( name );
+         if((field.getModifiers() & Modifier.TRANSIENT) == Modifier.TRANSIENT) return true;
+         return isTransient(field, jsonConfig);
       }catch( Exception e ){
-         // swallow exception
+         log.info( "Error while inspecting field "+beanClass+"."+name+" for transient status." ,e );
       }
       return false;
    }
-   
-   private static boolean isTransientField( Field field ) {
-      return (field.getModifiers() & Modifier.TRANSIENT) == Modifier.TRANSIENT;
+
+   private static boolean isTransient( AnnotatedElement element, JsonConfig jsonConfig ) {
+      for( Iterator annotations = jsonConfig.getIgnoreFieldAnnotations().iterator(); annotations.hasNext(); ) {
+         try {
+           String annotationClassName = (String) annotations.next();
+           if( element.getAnnotation((Class) Class.forName( annotationClassName )) != null ) return true;
+         } catch( Exception e ){
+            log.info( "Error while inspecting "+element+" for transient status." ,e );
+         }
+      }
+      return false;
    }
 
    private static Object morphPropertyValue( String key, Object value, Class type, Class targetType ) {
@@ -1299,10 +1365,16 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
       if( IdentityObjectMorpher.getInstance()
             .equals( morpher ) ){
          log.warn( "Can't transform property '" + key + "' from " + type.getName() + " into "
-               + targetType.getName() + ". Will register a default BeanMorpher" );
-         JSONUtils.getMorpherRegistry()
-               .registerMorpher( new BeanMorpher( targetType, JSONUtils.getMorpherRegistry() ) );
+               + targetType.getName() + ". Will register a default Morpher" );
+         if( Enum.class.isAssignableFrom( targetType ) ){
+            JSONUtils.getMorpherRegistry()
+                  .registerMorpher( new EnumMorpher( targetType ) );
+         }else{
+            JSONUtils.getMorpherRegistry()
+                  .registerMorpher( new BeanMorpher( targetType, JSONUtils.getMorpherRegistry() ) );
+         }
       }
+
       value = JSONUtils.getMorpherRegistry()
             .morph( targetType, value );
       return value;
@@ -1318,7 +1390,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
             : PropertySetStrategy.DEFAULT;
       propertySetStrategy.setProperty( bean, key, value, jsonConfig );
    }
-   
+
    private static void setValue( JSONObject jsonObject, String key, Object value, Class type,
          JsonConfig jsonConfig, boolean bypass ) {
       boolean accumulated = false;
@@ -1414,7 +1486,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
     *         null.
     */
    public JSONObject accumulate( String key, double value ) {
-      return _accumulate( key, new Double( value ), new JsonConfig() );
+      return _accumulate( key, Double.valueOf( value ), new JsonConfig() );
    }
 
    /**
@@ -1431,7 +1503,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
     *         null.
     */
    public JSONObject accumulate( String key, int value ) {
-      return _accumulate( key, new Integer( value ), new JsonConfig() );
+      return _accumulate( key, Integer.valueOf( value ), new JsonConfig() );
    }
 
    /**
@@ -1448,7 +1520,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
     *         null.
     */
    public JSONObject accumulate( String key, long value ) {
-      return _accumulate( key, new Long( value ), new JsonConfig() );
+      return _accumulate( key, Long.valueOf( value ), new JsonConfig() );
    }
 
    /**
@@ -1594,7 +1666,6 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
     * @throws JSONException
     */
    public JSONObject element( String key, Collection value, JsonConfig jsonConfig ) {
-      verifyIsNull();
       if( !(value instanceof JSONArray) ){
          value = JSONArray.fromObject( value, jsonConfig );
       }
@@ -2083,9 +2154,15 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
     *         is empty.
     */
    public JSONArray names() {
-      return names( new JsonConfig() );
+      verifyIsNull();
+      JSONArray ja = new JSONArray();
+      Iterator keys = keys();
+      while( keys.hasNext() ){
+         ja.element( keys.next() );
+      }
+      return ja;
    }
-   
+
    /**
     * Produce a JSONArray containing the names of the elements of this
     * JSONObject.
@@ -2292,7 +2369,7 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
       return o != null ? o.toString() : defaultValue;
    }
 
-   public Object put( Object key, Object value ) {
+   public Object put( String key, Object value ) {
       if( key == null ){
          throw new IllegalArgumentException( "key is null." );
       }
@@ -2511,30 +2588,35 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
     * @throws JSONException
     */
    protected void write(Writer writer, WritingVisitor visitor) throws IOException {
-      if( isNullObject() ){
-         writer.write(JSONNull.getInstance().toString());
-      }
-
-      boolean b = false;
-      Iterator keys = visitor.keySet(this).iterator();
-      writer.write('{');
-
-      while( keys.hasNext() ){
-         if( b ){
-            writer.write(',');
+      try{
+         if( isNullObject() ){
+            writer.write( JSONNull.getInstance()
+                  .toString());
          }
-         Object k = keys.next();
-         writer.write(JSONUtils.quote(k.toString()));
-         writer.write(':');
-         Object v = this.properties.get(k);
-         if( v instanceof JSON ){
-            visitor.on((JSON) v, writer);
-         }else{
-            visitor.on(v, writer);
+
+         boolean b = false;
+         Iterator keys = visitor.keySet(this).iterator();
+         writer.write( '{' );
+
+         while( keys.hasNext() ){
+            if( b ){
+               writer.write( ',' );
+            }
+            Object k = keys.next();
+            writer.write( JSONUtils.quote( k.toString() ) );
+            writer.write( ':' );
+            Object v = this.properties.get( k );
+            if( v instanceof JSON ){
+               visitor.on( (JSON) v, writer );
+            }else{
+               visitor.on( v, writer );
+            }
+            b = true;
          }
-         b = true;
+         writer.write( '}' );
+      }catch( IOException e ){
+         throw new JSONException( e );
       }
-      writer.write('}');
    }
 
    private JSONObject _accumulate( String key, Object value, JsonConfig jsonConfig ) {
@@ -2560,6 +2642,8 @@ public final class JSONObject extends AbstractJSON implements JSON, Map, Compara
    protected Object _processValue( Object value, JsonConfig jsonConfig ) {
       if( value instanceof JSONTokener ) {
          return _fromJSONTokener( (JSONTokener) value, jsonConfig );
+      }else if( value != null && Enum.class.isAssignableFrom( value.getClass() ) ){
+         return ((Enum) value).name();
       }
       return super._processValue( value, jsonConfig );
    }
